--- a/bars-sub-navbar.html
+++ b/bars-sub-navbar.html
@@ -7,7 +7,7 @@
       <div class="right"><a href="#" class="open-panel link icon-only"><i class="icon icon-bars"></i></a></div>
     </div>
     <div class="subnavbar">
-      <div class="buttons-row"><a href="#" class="button active">Link 1</a><a href="#" class="button">Link 2</a><a href="#" class="button">Link 3</a><a href="#" class="button">Link 4</a></div>
+      <center><img src="img/person1.jpg" width="40" height="40"></center>
     </div>
   </div>
   <div class="page-content with-subnavbar hide-bars-on-scroll">
