--- a/index.html
+++ b/index.html
@@ -146,23 +146,13 @@
             </div>
 			
 			<!--<a href="#" data-popover=".popover-contacts" class="floating-button floating-button-to-popover color-red open-popover"><i class="icon icon-plus"></i></a>-->
-			<a href="#" data-popover=".popover-music" class="floating-button floating-button-to-popover color-red open-popover"><i class="icon icon-plus"></i></a>
+			<a href="post.html" class="floating-button color-red"><i class="icon icon-plus"></i></a>
             </div>
           </div>
         </div>
     </div>
     
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+
 	
 	
 	<!--MODALS MODALS MODALS MODALS MODALS MODALS MODALS MODALS MODALS MODALS MODALS MODALS MODALS MODALS MODALS MODALS-->
@@ -354,12 +344,13 @@
                   </li>
                 </ul>
               </div>
-              <div class="content-block"><a href="#" class="button button-big button-fill color-red close-login-screen">Sign In</a></div>
-              <div class="content-block"><a href="#" class="button button-big color-red demo-alert">Register</a></div>
+              <div class="content-block"><a href="index.html" class="button button-big button-fill color-red close-login-screen">Sign In</a></div>
+              <div class="content-block"><a href="registeration.html" class="button button-big color-red close-login-screen">Register</a></div>
               <div class="content-block">
                 <div class="list-block-label">Some text about login information.<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
               </div>
             </form>
+			
           </div>
         </div>
       </div>
